--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html>
 <html>
-<head><title>Hello!</title></head>
-<body><h1>Hello World</h1></body>
+<head>
+  <meta charset="UTF-8">
+  <title>Hi!<title>
+</head>
+<body>
+  <h1>Hello World</h1>
+  <p>From master</p>
+</body>
 </html>
